overflow issues

--- a/src/styles/post.css
+++ b/src/styles/post.css
@@ -25,7 +25,7 @@ a {
 }
 
 .fullImgCover {
-    width: 100vw;
+    width: 100%;
     height: auto;
     top: 0;
 
